--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "continue-rag"
 version = "0.1.0"
@@ -23,3 +27,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
+
+[project.scripts]
+continue-rag-index = "index_code:main"
+continue-rag-server = "server:main"
